--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    
+    <main>
+        <div>PLAY</div>
+        <div>RULES</div>
+    </main>
 </body>
 </html>
