create menu and rules

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <main>
+    <!--MENU-->
+    <div id="menu">
         <div>PLAY</div>
         <div>RULES</div>
-    </main>
+    </div>
+    <!--RULES-->
+    <div id="rules">
+        <img src="imagens/rules.png" alt="Image that explains the rules of the game">
+        <div class="back">
+            BACK
+        </div>
+    </div>
+    <!--GAMEPLAY-->
+    <div id="gameplay">
+
+    </div>
 </body>
 </html>
