Main menu and rules

--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
 </head>
 <body>
     <!--MENU-->
-    <div id="menu">
-        <div>PLAY</div>
-        <div>RULES</div>
+    <div id="menu" class="">
+        <div id="logo">
+            <p>JOKENPO</p>
+            <img src="imagens/logojoken.png" alt="Gamer logo">
+        </div>
+        <input type="button" value="PLAY" class="button">
+        <input type="button" value="RULES" class="button">
     </div>
     <!--RULES-->
-    <div id="rules">
+    <div id="rules" class="">
         <img src="imagens/rules.png" alt="Image that explains the rules of the game">
-        <div class="back">
-            BACK
-        </div>
+        <input type="button" value="BACK" class="button">
     </div>
     <!--GAMEPLAY-->
-    <div id="gameplay">
+    <div id="gameplay" class="container center">
 
     </div>
 </body>
