--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!--MENU-->
-    <div id="menu" class="none">
+    <div id="menu" class="">
         <div id="logo">
             <p>JOKENPO</p>
             <img src="imagens/logojoken.png" alt="Game logo">
@@ -18,7 +18,7 @@
         <input type="button" value="RULES" class="button">
     </div>
     <!--RULES-->
-    <div id="rules" class="none">
+    <div id="rules" class="">
         <img src="imagens/rules.png" alt="Image that explains the rules of the game">
         <input type="button" value="BACK" class="button">
     </div>
@@ -52,13 +52,13 @@
         
     </div>
     <!--WINNER-->
-    <div id="winner" class="none">
+    <div id="winner" class="">
         <p>YOU WIN!</p>
         <input type="button" value="PLAY AGAIN" class="button">
         <input type="button" value="MAIN MENU" class="button">
     </div>
     <!--LOSER-->
-    <div id="loser" class="none" >
+    <div id="loser" class="" >
         <p>YOU LOSE...</p>
         <input type="button" value="PLAY AGAIN" class="button">
         <input type="button" value="MAIN MENU" class="button">
