--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <div>CPU</div>
         </div>
             <div id="match">
-                <div id="move1">
+                <div id="playermove">
                     
                 </div>
-                <div id="move2">
+                <div id="cpumove">
                     
                 </div>
             </div>
