--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             </div>
             <p>CHOOSE YOUR MOVE</p>
             <div id="movement">
-                <input type="radio" name="txt" id="rock">
+                <input type="radio" name="txt" value="rock">
                 <label for="rock"><img src="imagens/rock.png" alt="rock"></label>
-                <input type="radio" name="txt" id="paper">
+                <input type="radio" name="txt" value="paper">
                 <label for="paper"><img src="imagens/paper.png" alt="paper"></label>
-                <input type="radio" name="txt" id="scissors">
+                <input type="radio" name="txt" value="scissors">
                 <label for="scissors"><img src="imagens/scissors.png" alt="scissors"></label>
             </div> 
                 <input type="button" value="JOKENPO!" class="button">
