--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                 </div>
             </div>
             <p>CHOOSE YOUR MOVE</p>
-            <div id="movement">
-                <input type="radio" name="txt" value="rock">
+            <form id="movement">
+                <input type="radio" name="choices" id="rock">
                 <label for="rock"><img src="imagens/rock.png" alt="rock"></label>
-                <input type="radio" name="txt" value="paper">
+                <input type="radio" name="choices" id="paper">
                 <label for="paper"><img src="imagens/paper.png" alt="paper"></label>
-                <input type="radio" name="txt" value="scissors">
+                <input type="radio" name="choices" id="scissors">
                 <label for="scissors"><img src="imagens/scissors.png" alt="scissors"></label>
-            </div> 
+            </form> 
                 <input type="button" value="JOKENPO!" class="button">
                 
             
