--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             </div>
             <p>CHOOSE YOUR MOVE</p>
             <form id="movement">
-                <input type="radio" name="choices" id="rock">
+                <input type="radio" onclick="image()" name="choices" value="black-rock">
                 <label for="rock"><img src="imagens/rock.png" alt="rock"></label>
-                <input type="radio" name="choices" id="paper">
+                <input type="radio" onclick="image()" name="choices" value="black-paper">
                 <label for="paper"><img src="imagens/paper.png" alt="paper"></label>
-                <input type="radio" name="choices" id="scissors">
+                <input type="radio" onclick="image()" name="choices" value="black-scissors">
                 <label for="scissors"><img src="imagens/scissors.png" alt="scissors"></label>
             </form> 
                 <input type="button" value="JOKENPO!" class="button">
